      they merely wrote the (potentially ambiguous) nickname.
    - Clients now use the v2 intro format for hidden service
      connections: they specify their chosen rendezvous point by identity
      digest rather than by (potentially ambiguous) nickname. These
      changes could speed up hidden service connections dramatically.

  o Minor bugfixes:
    - When generating information telling us how to extend to a given
      router, do not try to include the nickname if it is absent.  Fixes
      bug 467.
    - On OSX, stop warning the user that kqueue support in libevent is
      "experimental", since it seems to have worked fine for ages.
    - Fix a user-triggerable segfault in expand_filename().  (There isn't
      a way to trigger this remotely.)
    - Fix a memory leak when freeing incomplete requests from DNSPort.
      (Found by Niels Provos with valgrind.)
    - Don't try to access (or alter) the state file when running
      --list-fingerprint or --verify-config or --hash-password. (Resolves
      bug 499.)
    - Servers used to decline to publish their DirPort if their
      BandwidthRate, RelayBandwidthRate, or MaxAdvertisedBandwidth
      were below a threshold. Now they only look at BandwidthRate and
      RelayBandwidthRate.
    - Remove an optimization in the AES counter-mode code that assumed that
      the counter never exceeded 2^68.  When the counter can be set
      arbitrarily as an IV (as it is by Karsten's new hidden services code),
      this assumption no longer holds.
    - Resume listing "AUTHORITY" flag for authorities in network status.
      Bugfix on 0.2.0.3-alpha; reported by Alex de Joode.

  o Code simplifications and refactoring:
    - Revamp file-writing logic so we don't need to have the entire contents
      of a file in memory at once before we write to disk.  Tor, meet stdio.
    - Turn "descriptor store" into a full-fledged type.
    - Move all NT services code into a separate source file.