@@ -51,6 +51,10 @@ Changes in version 0.2.0.7-alpha - 2007-09-21
       connections: they specify their chosen rendezvous point by identity
       digest rather than by (potentially ambiguous) nickname. These
       changes could speed up hidden service connections dramatically.
+    - Fix a bug that made servers send a "404 Not found" in response to
+      attempts to fetch their server descriptor. This caused Tor servers
+      to take many minutes to establish reachability for their DirPort,
+      and it totally crippled bridges. Bugfix on 0.2.0.5-alpha.
 
   o Minor bugfixes:
     - When generating information telling us how to extend to a given
